# goit-web-12

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  settings.py  test.db
docs/source/: conf.py  index.rst  repository.rst  routes.rst  services.rst  utils.rst
migrations/: env.py
migrations/versions/: 6f7fe949133e_update_user.py  7ea2a31e6f8b_update_user.py  996cab6243df_initial_migration.py  efa44edea5b5_create_table.py
src/: contact_crud.py  main.py  models.py  schemas.py
src/configuration/: database.py  models.py
src/repository/: auth.py  contact_crud.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/utils/: cloudinary.py
tests/: conftest.py  test.db  test_repository.py  test_routes_auth.py
tests/auth/: creation.py
